<!--
  ~ Copyright (c) 2021, Beesechurgers <https://github.com/Beesechurgers>
  ~
  ~ Permission is hereby granted, free of charge, to any person obtaining a copy
  ~ of this software and associated documentation files (the "Software"), to deal
  ~ in the Software without restriction, including without limitation the rights
  ~ to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
  ~ copies of the Software, and to permit persons to whom the Software is
  ~ furnished to do so, subject to the following conditions:
  ~
  ~ The above copyright notice and this permission notice shall be included in all
  ~ copies or substantial portions of the Software.
  -->

<resources>
    <string name="app_name">Parker</string>
    <string name="sign_up">Sign up</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="login">Login</string>
    <string name="email_id">Email ID</string>
    <string name="password">Password</string>
    <string name="car_number">Car Number</string>
    <string name="car_number_importance">You cannot use this app without providing your car number.</string>
    <string name="complete_registration">Complete Registration</string>
    <string name="sign_out">Sign out</string>
    <string name="initialize_session">Initialize session</string>
    <string name="scan">Scan</string>
    <string name="re_scan">Re-Scan</string>
    <string name="oops">Oops !</string>
    <string name="invalid_number_plate_info">The scanned number plate doesn\'t match the registered number plate.</string>
    <string name="qr_scan_description">Scan the QR Code shown on the panel</string>
    <string name="parking_area">Parking Area</string>
    <string name="processing">Processing …</string>
    <string name="car_already_entered_error">This car number has already entered some other parking lot</string>
    <string name="payment_pending_error">Payment from previous parking isn\'t completed</string>
    <string name="payment">Payment</string>
    <string name="amount">Amount</string>
    <string name="payment_time_elapsed">Time elapsed: %s min(s)</string>
    <string name="pay_now">Pay Now</string>
    <string name="payment_car_number">Car Number: %s</string>
    <string name="payment_amount">\u20B9 %s</string>
    <string name="live_session_time_elapsed">%s min(s)</string>
    <string name="ongoing_session">Ongoing Session</string>
    <string name="pending_payment">Pending Payment</string>
    <string name="payment_methods">Selected Payment Method</string>
    <string name="paypal">Paypal</string>
    <string name="change">Change</string>
    <string name="history">History</string>
    <string name="history_description">View your payment history</string>
    <string name="payment_history">Payment History</string>
    <string name="payment_history_amount">Amount: \u20B9 %s</string>
    <string name="no_history_yet">No history yet</string>
    <string name="refresh">Refresh</string>
    <string name="copyright">Copyright \u00A9 2021, Beesechurgers</string>
</resources>