<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    tools:context=".ScannerActivity">

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:padding="16dp"
        android:text="@string/parking_area"
        android:textColor="@color/colorAccent"
        android:textSize="24sp" />

    <LinearLayout
        android:id="@+id/qr_scan_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="8dp"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/qr_scan_description"
            android:textColor="@color/textColor"
            android:textSize="16sp" />

        <androidx.camera.view.PreviewView
            android:id="@+id/camera_preview"
            android:layout_width="289dp"
            android:layout_height="289dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="24dp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/scan_error_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="8dp"
        android:orientation="vertical"
        android:visibility="gone">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="8dp"
            android:src="@drawable/ic_round_info_24" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="8dp"
            android:text="@string/oops"
            android:textColor="@color/textColor"
            android:textSize="18sp"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="8dp"
            android:text="@string/invalid_number_plate_info"
            android:textAlignment="center"
            android:textColor="@color/textColor"
            android:textSize="16sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/scan_process"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="8dp"
        android:orientation="vertical"
        android:visibility="gone">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="8dp"
            android:text="@string/processing"
            android:textColor="@color/textColor"
            android:textSize="18sp" />

        <ProgressBar
            android:layout_width="76dp"
            android:layout_height="76dp"
            android:layout_gravity="center"
            android:layout_margin="16dp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/process_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="8dp"
            android:textAlignment="center"
            android:textColor="@color/textColor"
            android:textSize="18sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center_horizontal"
        android:layout_margin="16dp"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/scanned_data"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:textAlignment="center"
            android:textColor="@color/textColor"
            android:textSize="18sp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/re_scan_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/re_scan"
            android:textAllCaps="false"
            android:visibility="gone"
            app:backgroundTint="@color/red" />

    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>